were some problems with marging and aligning paragraphs. solved it via 'transform'

--- a/styles.css
+++ b/styles.css
@@ -214,10 +214,21 @@ h1 {
     width: 100%;
     background-color: #c1c0c0;
 }
-.variable_description {
+.variable_description p {
+    width: 340px;
+    height: auto;
     font-family: sans-serif;
-    font-size: 10px;
+    font-size: 8px;
+    font-weight: bold;
     color: white;
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    margin-left: 33px;
+}
+.variable_description {
     height: 40px;
     width: 100%;
     background-image: -webkit-gradient(
@@ -235,13 +246,12 @@ h1 {
 }
 h2 {
     background-color: #c1c0c0;
-    height: 31px;
     /* width: 100%; */
     font-size: 16px;
     font-family: FrutigerLTStd-Black,sans-serif;
     color: white;
     float: left;
-    margin: 0 auto;
+    margin: 4px 0px 0px 14px;
 }
 .calculator_legend { 
     margin-top: 462px;
